fix: made necessary corrections
- Deleted UserLoginResponseDto class.
- Updated AuthenticationService interface to return String for login method.
- Modified AuthenticationServiceImpl to return JWT token directly as String.
- Adjusted AuthenticationController to return String for login method.
- Removed unnecessary changes in SecurityConfig.
- Corrected BookDtoWithoutCategoryIds and CategoryDto to remove isDeleted field.
- Updated Book model to use book_categories table for ManyToMany relationship with Category.
- Ensured Category model has unique constraint on name field.
- Fixed BookServiceImpl to use .toList() instead of .collect(Collectors.toList()).
- Fixed CategoryServiceImpl to use .toList() instead of .collect(Collectors.toList()).
- Added missing books_categories table to db.changelog-7.0.yaml for ManyToMany relationship between Book and Category.